--- a/val2sim_gui/ui/surveillance.ui
+++ b/val2sim_gui/ui/surveillance.ui
@@ -118,7 +118,7 @@
       </font>
      </property>
      <property name="text">
-      <string>Pause</string>
+      <string>Engage</string>
      </property>
     </widget>
    </widget>
